[tool.poetry]
name = "Adivinhar palavra embaralhada"
version = "0.1.0"
description = "Um jogo de desembaralhar uma palavra"
authors = ["Gabriela"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
